--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-# Core dependencies based on your code
-pandas==2.0.0           # Data manipulation (Excel reading)
-python-dotenv==1.0.0    # Load environment variables
-google-generativeai==0.3.2  # Google Gemini API
-streamlit==1.32.0       # Interactive web app
-openpyxl==3.1.2         # Excel file support (dependency for pandas)
+pandas>=2.0.0           # Data manipulation (Excel reading)
+numpy>=1.23.0           # Numerical computations (dependency for pandas)
+python-dotenv>=1.0.0    # Load environment variables
+google-generativeai>=0.3.2  # Google Gemini API
+streamlit>=1.32.0       # Interactive web app
+protobuf>=4.21.0        # Required for Streamlit
+openpyxl>=3.1.2         # Excel file support (dependency for pandas)
